[package]
name = "mcutie"
version = "0.1.0"
edition = "2021"

[features]
default = ["homeassistant"]
homeassistant = ["dep:serde", "dep:serde-json-core"]

[dependencies]
defmt = "0.3.8"
embassy-net = { version = "0.5.0", features = [
  "dns",
  "medium-ip",
  "proto-ipv4",
  "tcp",
  "defmt",
] }
embassy-time = "0.3.2"
serde = { version = "1.0.215", default-features = false, features = [
  "derive",
], optional = true }
serde-json-core = { version = "0.6.0", optional = true }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
mqttrs = { version = "0.4.1", default-features = false }
heapless = "0.7.0"
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
