[package]
name = "mcutie"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Mossop/mcutie"
description = "A no-std, no-alloc, opinionated MQTT client for IoT devices"

[features]
default = ["homeassistant"]
homeassistant = ["serde"]
serde = ["dep:serde", "dep:serde-json-core"]
defmt = ["dep:defmt", "embassy-net/defmt"]
log = ["dep:log"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
log = { version = "0.4.22", optional = true }
embassy-net = { version = "0.5.0", features = [
  "dns",
  "medium-ip",
  "medium-ethernet",
  "proto-ipv4",
  "tcp",
] }
embassy-time = "0.3.2"
serde = { version = "1.0.216", default-features = false, features = [
  "derive",
], optional = true }
serde-json-core = { version = "0.6.0", optional = true }
embassy-futures = "0.1.1"
embassy-sync = "0.6.1"
embedded-io-async = "0.6.1"
mqttrs = { version = "0.4.1", default-features = false }
heapless = "0.7.0"
embedded-io = "0.6.1"
once_cell = { version = "1.20.2", default-features = false, features = [
  "critical-section",
] }
hex = { version = "0.4.3", default-features = false }
pin-project = "1.1.7"
